--- a/AzureTrainingApp/Pages/Index.cshtml
+++ b/AzureTrainingApp/Pages/Index.cshtml
@@ -6,5 +6,5 @@
 
 <div class="text-center">
     <h1 class="display-4">Welcome</h1>
-    <p>Azure Traning App with ASP.NET Core</a>.</p>
+    <p>Azure Traning App with ASP.NET Core = Git</a>.</p>
 </div>
